--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     </div>
       <span class="cardpack--container">
         <span id="glow"class="glow"></span>
-        <div class="cardpackButton" onclick="OneMoreOnButtonClick();"><span id="button-name">カードを引く</span></div>
+        <div class="cardpackButton" onclick="OneMoreOnButtonClick();"><span id="button-name" class="button_title">Get Card</span></div>
         <div id="card_1" class="card"><img id="holo"class="holo"src="https://assets.codepen.io/13471/sparkles.gif" alt=""><img src="./img1.jpg" alt=""class="card_img"></div>
         <div id="card_2" class="card"><img id="holo"class="holo"src="https://assets.codepen.io/13471/sparkles.gif" alt=""><img src="./img2.jpg" alt=""class="card_img"></div>
         <div id="card_3" class="card"><img id="holo"class="holo"src="https://assets.codepen.io/13471/sparkles.gif" alt=""><img src="./img3.jpeg" alt=""class="card_img"></div>
         <div id="card_4" class="card"><img id="holo"class="holo"src="https://assets.codepen.io/13471/sparkles.gif" alt=""><img src="./img4.webp" alt=""class="card_img"></div>
         <div id="card_5" class="card"><img id="holo"class="holo"src="https://assets.codepen.io/13471/sparkles.gif" alt=""><img src="./img5.jpeg" alt=""class="card_img"></div>
-        <div id="onemore" class="btn btn-solid-silver" onclick="OneMoreOnButtonClick();" style="color: white; margin-top:500px; text-align: center;  position: absolute; width: 300px;left: 0;right: 0;top: 0;bottom: 0;">もう一度引く</div>
+        <div id="onemore" class="Again_button" onclick="OneMoreOnButtonClick();" style="color: white; margin-top:500px; text-align: center;  position: absolute; width: 300px;left: 0;right: 0;top: 0;bottom: 0;">Again</div>
       </span>
     
     <script src="card_pack.js"></script>
