--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <div id="card_1" class="card"><img id="holo"class="holo"src="https://assets.codepen.io/13471/sparkles.gif" alt=""><img src="./images/img1.jpg" alt=""class="card_img"><div id="glow2" class="glow2"></div></div>
         <div id="card_2" class="card"><img id="holo"class="holo"src="https://assets.codepen.io/13471/sparkles.gif" alt=""><img src="./images/img2.jpg" alt=""class="card_img"><div id="glow2" class="glow2"></div></div>
         <div id="card_3" class="card"><img id="holo"class="holo"src="https://assets.codepen.io/13471/sparkles.gif" alt=""><img src="./images/img3.jpeg" alt=""class="card_img"><div id="glow2" class="glow2"></div></div>
-        <div id="card_4" class="card"><img id="holo"class="holo"src="https://assets.codepen.io/13471/sparkles.gif" alt=""><img src="./images/img4.webp" alt=""class="card_img"><div id="glow2" class="glow2"></div></div>
+        <div id="card_4" class="card"><img id="holo"class="holo"src="https://assets.codepen.io/13471/sparkles.gif" alt=""><img src="./images/img4.jpeg" alt=""class="card_img"><div id="glow2" class="glow2"></div></div>
         <div id="card_5" class="card"><img id="holo"class="holo"src="https://assets.codepen.io/13471/sparkles.gif" alt=""><img src="./images/img5.jpeg" alt=""class="card_img"><div id="glow2" class="glow2"></div></div>
-         <div id="card_6" class="card"><img id="holo"class="holo"src="https://assets.codepen.io/13471/sparkles.gif" alt=""><img src="./images/img6.jpg" alt=""class="card_img"><div id="glow2" class="glow2"></div></div>
-        <div id="card_7" class="card"><img id="holo"class="holo"src="https://assets.codepen.io/13471/sparkles.gif" alt=""><img src="./images/img7.png" alt=""class="card_img"><div id="glow2" class="glow2"></div></div>
+         <div id="card_6" class="card"><img id="holo"class="holo"src="https://assets.codepen.io/13471/sparkles.gif" alt=""><img src="./images/img6.jpeg" alt=""class="card_img"><div id="glow2" class="glow2"></div></div>
+        <div id="card_7" class="card"><img id="holo"class="holo"src="https://assets.codepen.io/13471/sparkles.gif" alt=""><img src="./images/img7.jpeg" alt=""class="card_img"><div id="glow2" class="glow2"></div></div>
         <div id="onemore" class="Again_button" onclick="OneMoreOnButtonClick();" style="color: white; margin-top:500px; text-align: center;  position: absolute; width: 300px;left: 0;right: 0;top: 0;bottom: 0;"><img src="./images/Again.png" alt=""></div>
       </span>
     <script src="card_pack.js"></script>
